--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -2,7 +2,7 @@ title = "The Robellion"
 
 [params.author]
 name = "The Robellion"
-image = "img/author.jpg"
+image = "img/itsrobel.jpg"
 headline = "A generally awesome human, who occasionally writes code"
 bio = "A little bit about me"
 # links = [
