--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -4,7 +4,7 @@ title = "The Robellion"
 name = "Robel A. Istefanos"
 image = "img/itsrobel.jpg"
 headline = "A generally awesome human, who occasionally writes code"
-bio = "I all of my subjective opinions are objectively correct, subjectively"
+bio = "All of my subjective opinions are objectively correct, subjectively"
 # links = [
 #   { twitter = "https://twitter.com/username" }
 # ]
