--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -3,7 +3,7 @@ title = "The Robellion"
 [params.author]
 name = "Robel A. Istefanos"
 image = "img/itsrobel.jpg"
-headline = "A generally awesome human, who occasionally writes code"
+headline = "If I have seen further, it is by standing on the shoulders of gaints"
 bio = "All of my subjective opinions are objectively correct, subjectively"
 # links = [
 #   { twitter = "https://twitter.com/username" }
